--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body{
 /* END OF OUTLINE */
 
 /* START OF LEFT SIDE CODE */
-.left .pic{
+.left .badges{
     border: solid black;
     height: 20%;
 }
@@ -71,19 +71,84 @@ body{
 .left .pic img{
     width: auto;
     height: 100px;
-    padding: 20px;
-    border-radius: 50px;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
 .left .details{
     border: solid black;
     border-right: none;
     height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-left: 25px;
+    font-size: 18px;
 }
 
-.info{
-    padding: 20px;
-    font-size: 25px;
+.details .button{
+    display: inline-block;
+    height: 70px;
+    width: 130px;
+    background: #fff;
+    border-radius: 30px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 65px;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
+    transition:  all 0.3s ease-out;
+}
+
+.details .button:hover{
+    width: 300px;
+}
+
+.details .button .name::before {
+    content: "Name";
+  }
+
+.details .button .name:hover::before {
+    content: "Mark David L. Basinillo";
+}
+
+.details .button .age::before {
+    content: "Age";
+  }
+
+.details .button .age:hover::before {
+    content: "20 years old";
+}
+
+.details .button .bday::before {
+    content: "Bday";
+  }
+
+.details .button .bday:hover::before {
+    content: "June 28, 2003";
+}
+
+.details .button .verse::before {
+    content: "Verse";
+  }
+
+.details .button .verse:hover::before {
+    content: "John 3:16";
+}
+
+.details .button .quote::before {
+    content: "Quote";
+  }
+
+.details .button .quote:hover::before {
+    content: "Live your life";
+}
+
+.details .button .hobbies::before {
+    content: "Hobbies";
+  }
+
+.details .button .hobbies:hover::before {
+    content: "Gaming, Music";
 }
 
 .left .socials{
@@ -151,11 +216,8 @@ body{
     background: #1DA1F2;
 }
 
-
-
-
 /* START OF RIGHT SIDE CODE */
-.right .pic{
+.right .badges{
     border: solid black;
     height: 20%;
 }
