--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@ body{
     flex-direction: column;
     margin: 0;
     padding: 0%;
-    background-image: url("");
+    background-image: url("Images/mark.jpeg");
     background-size: cover;
+    background-position: 0px -30px;
     background-repeat: no-repeat;
 }
 
@@ -36,35 +37,37 @@ body{
 
 .mid{
     border: solid 5px black;
-    border-radius: 15px;
+    border-radius: 50%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 30%;
-    height: 30%;
+    width: 200px;
+    height: 200px;
+    background-image: url(Images/logo.png);
+    background-position: center;
+    background-size: cover;
 }
 
-.top-line{
+/* .top-line{
     border: solid black;
     position: absolute;
-    height: 34%;
+    height: 35.5%;
     top: 0px;
     left: 49.85%;
 }
 
 .bottom-line{
     border: solid black;
-    position: absolute;
+    position: relative;
     height: 33%;
-    top: 65%;
+    top: 64%;
     left: 49.85%;
-}
+} */
 /* END OF OUTLINE */
 
 /* START OF LEFT SIDE CODE */
 .left .badges{
-    border: solid black;
     height: 20%;
 }
 
@@ -76,13 +79,12 @@ body{
 }
 
 .left .details{
-    border: solid black;
     border-right: none;
     height: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding-left: 25px;
+    padding-left: 35px;
     font-size: 18px;
 }
 
@@ -127,14 +129,6 @@ body{
     content: "June 28, 2003";
 }
 
-.details .button .verse::before {
-    content: "Verse";
-  }
-
-.details .button .verse:hover::before {
-    content: "John 3:16";
-}
-
 .details .button .quote::before {
     content: "Quote";
   }
@@ -152,7 +146,6 @@ body{
 }
 
 .left .socials{
-    border: solid black;
     height: 10%;
     padding: 30px;
 }
@@ -161,7 +154,6 @@ body{
     display: inline-block;
     height: 60px;
     width: 60px;
-    float: left;
     margin: 0 5px;
     background: white;
     border-radius: 50px;
@@ -171,8 +163,18 @@ body{
     overflow: hidden;
 }
 
-.socials .button:hover{
-    width: 200px;
+.left .socials .facebook:hover{
+    width: 180px;
+    background: #fff;
+}
+
+.left .socials .instagram:hover{
+    width: 190px;
+    background: #fff;
+}
+
+.left .socials .twitter:hover{
+    width: 160px;
     background: #fff;
 }
 
@@ -182,12 +184,11 @@ body{
     width: 60px;
     border-radius: 50px;
     box-sizing: border-box;
-    line-height: 60px;
     text-align: center;
     transition:  all 0.4s ease-out;
 }
 
-.socials .button .icon i{
+ .socials .button .icon i{
     font-size: 25px;
     line-height: 60px;
     transition:  all 0.4s ease-out;
@@ -198,11 +199,11 @@ body{
 }
 
 .socials .button span{
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 60px;
-    margin-left: 10px;
-}
+    font-size: 18px;
+    position: relative;
+    top: -5px;
+    right: -5px;
+} 
 
 .socials .button:nth-child(1):hover .icon{
     background: #4767B2;
@@ -232,4 +233,9 @@ body{
     border: solid black;
     height: 10%;
     padding: 30px;
+}
+
+/* START OF MID CONTAINER */
+.mid{
+    background-color: whitesmoke;
 }
