--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/valorant');
 
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Lexend;
+    font-family: Valorant, Lexend;
 }
 
 /* START OF OUTLINE */
@@ -26,6 +27,7 @@ body{
     background-size: cover;
     background-position: 0px -30px;
     background-repeat: no-repeat;
+    border-right: solid black 2px;
 }
 
 .right{
@@ -36,7 +38,7 @@ body{
 }
 
 .mid{
-    border: solid 5px black;
+    border: solid #000000 2px;
     border-radius: 50%;
     position: absolute;
     top: 50%;
@@ -67,15 +69,26 @@ body{
 /* END OF OUTLINE */
 
 /* START OF LEFT SIDE CODE */
-.left .badges{
+.left .header{
     height: 20%;
+    display: flex;
+    align-items: center;
 }
 
-.left .pic img{
+/* .left .pic img{
     width: auto;
     height: 100px;
     padding-top: 20px;
     padding-left: 20px;
+} */
+
+.left .header .pic{
+    height: 100px;
+    width:  100px;
+    border-radius: 50%;
+    margin-left: 30px;
+    background-color: white;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .left .details{
@@ -98,7 +111,8 @@ body{
     text-align: center;
     line-height: 65px;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
-    transition:  all 0.3s ease-out;
+    transition:  all 0.4s ease-out;
+    overflow: hidden;
 }
 
 .details .button:hover{
@@ -164,17 +178,17 @@ body{
 }
 
 .left .socials .facebook:hover{
-    width: 180px;
-    background: #fff;
-}
-
-.left .socials .instagram:hover{
     width: 190px;
     background: #fff;
 }
 
+.left .socials .instagram:hover{
+    width: 200px;
+    background: #fff;
+}
+
 .left .socials .twitter:hover{
-    width: 160px;
+    width: 170px;
     background: #fff;
 }
 
@@ -200,9 +214,7 @@ body{
 
 .socials .button span{
     font-size: 18px;
-    position: relative;
-    top: -5px;
-    right: -5px;
+    margin-left: 5px;
 } 
 
 .socials .button:nth-child(1):hover .icon{
